proc-mount/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sPSPProcMount
metadata:
  name: psp-proc-mount
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    procMount: Default
